--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 **/latest-run
 **/wandb/debug*
 **/bpteRun
+jaejin/Train/__pycache__/functions.cpython-310.pyc
+jaejin/Train/wandb/debug.log
+jaejin/Train/wandb/debug-internal.log
+jaejin/Train/wandb/latest-run
