--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 **/train_result/
 **/data
 **/wandb
-**/wandb/latest-run
+**/latest-run
 **/wandb/debug*
 **/bpteRun
+jaejin/Train/__pycache__/functions.cpython-310.pyc
+jaejin/Train/wandb/debug.log
+jaejin/Train/wandb/debug-internal.log
+jaejin/Train/wandb/latest-run
+jaejin/Train/bpteRun.sh
