--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ jaejin/Train/__pycache__/functions.cpython-310.pyc
 jaejin/Train/wandb/debug.log
 jaejin/Train/wandb/debug-internal.log
 jaejin/Train/wandb/latest-run
-jaejin/Train/bpteRun.sh
+**/bpteRun.sh
